--- a/url.html
+++ b/url.html
@@ -1491,6 +1491,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://manus.im"><strong>Manus</strong></a></p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
 <p><a href="https://www.runjs.cool/"><strong>前端工具箱</strong></a> <a href="https://md2card.com/zh">md2card</a> <a href="https://ppt.runjs.cool">md2ppt</a> <a href="https://www.yourware.so">一键分享网页</a></p>
+<p><a href="https://www.github.com/cyfyifanchen/one-person-company">one-person-company</a>
+<a href="onepersoncompany.html">one-person-company2</a></p>
 </div>
 <div id="media" class="section level1">
 <h1>Media</h1>
