--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-03-30" />
+<meta name="date" content="2025-04-03" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-03-30</h4>
+<h4 class="date">2025-04-03</h4>
 
 </div>
 
@@ -1490,7 +1490,7 @@ document.addEventListener("DOMContentLoaded", function() {
 [Bolt.new]</p>
 <p><a href="https://manus.im"><strong>Manus</strong></a></p>
 <p><a href="ai.html"><strong>AI应用</strong></a></p>
-<p><a href="https://www.runjs.cool/"><strong>前端工具箱</strong></a> <a href="https://md2card.com/zh">md2card</a> <a href="https://ppt.runjs.cool">md2ppt</a> <a href="https://www.yourware.so">一键分享网页</a></p>
+<p><a href="https://www.runjs.cool/"><strong>前端工具箱</strong></a> <a href="https://md2card.com/zh">md2card</a> <a href="https://ppt.runjs.cool">md2ppt</a> <a href="https://www.yourware.so">一键分享网页</a> <a href="https://32kw.com">一键分享AI内容</a></p>
 <p><a href="https://www.github.com/cyfyifanchen/one-person-company">one-person-company</a>
 <a href="onepersoncompany.html">one-person-company2</a></p>
 </div>
