--- a/url.html
+++ b/url.html
@@ -1478,12 +1478,11 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="ai" class="section level1">
 <h1>AI</h1>
 <p><a href="https://sider.ai"><strong>Sider</strong></a> <a href="https://chat.deepseek.com">DeepSeek</a> <a href="https://claude.ai">Claude</a> <a href="https://x.ai">Grok</a></p>
-<p><a href="https://chatgpt.com"><strong>ChatGPT</strong></a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
+<p><a href="https://chatgpt.com"><strong>ChatGPT</strong></a> <a href="https://academy.openai.com">openaiacademy</a> <a href="https://bot.360.com">360助手</a> <a href="https://noi.nofwl.com">Noi</a> <a href="https://www.min2k.com">Min2k</a> <a href="https://www.xueshuchuangxin.com/AITools/AITools">青泥学术</a> <a href="https://tools.aigcfun.com">AIGC</a> <a href="https://ai-bot.cn">ai-bot</a></p>
 <p><a href="https://perplexity.ai"><strong>Perplexity</strong></a> <a href="https://mplx.run">MiniPerplexity</a></p>
 <p><a href="https://aistudio.google.com"><strong>AIstudio</strong>图片生成</a>
-<a href="https://huggingface.co/spaces/philschmid/image-generation-editing?continueFlag=6a2e6b25c6b8a9ec8598c7b12e7d808c">图片生成编辑网页APP</a>
-<a href="https://gemini.google.com">googledeepsearch</a></p>
-<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.xiaohuanxiong.com">办公小浣熊</a> <a href="https://www.metaso.cn">Metaso</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.goole.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
+<a href="https://gemini.google.com">google deepsearch</a> <a href="https://huggingface.co/spaces/philschmid/image-generation-editing?continueFlag=6a2e6b25c6b8a9ec8598c7b12e7d808c">图片生成编辑网页APP</a></p>
+<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.xiaohuanxiong.com">办公小浣熊</a> <a href="https://www.metaso.cn">Metaso</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.google.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
 <a href="https://yuanbao.tencent.cn">元宝</a></p>
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
