--- a/url.html
+++ b/url.html
@@ -1487,8 +1487,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
-<p><a href="https://manus.im"><strong>Manus</strong></a></p>
-<p><a href="ai.html"><strong>AI应用</strong></a></p>
+<p><a href="https://manus.im"><strong>Manus</strong></a> <a href="https://www.genspark.ai/">Genspark</a></p>
+<p><a href="ai.html"><strong>AI应用</strong></a> <a href="https://www.laoshibang.com">老师帮</a></p>
 <p><a href="https://www.runjs.cool/"><strong>前端工具箱</strong></a> <a href="https://md2card.com/zh">md2card</a> <a href="https://ppt.runjs.cool">md2ppt</a> <a href="https://www.yourware.so">一键分享网页</a> <a href="https://32kw.com">一键分享AI内容</a></p>
 <p><a href="https://www.github.com/cyfyifanchen/one-person-company">one-person-company</a>
 <a href="onepersoncompany.html">one-person-company2</a></p>
