--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-04-03" />
+<meta name="date" content="2025-07-07" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-04-03</h4>
+<h4 class="date">2025-07-07</h4>
 
 </div>
 
@@ -1482,9 +1482,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://perplexity.ai"><strong>Perplexity</strong></a> <a href="https://mplx.run">MiniPerplexity</a></p>
 <p><a href="https://aistudio.google.com"><strong>AIstudio</strong>图片生成</a>
 <a href="https://gemini.google.com">google deepsearch</a> <a href="https://huggingface.co/spaces/philschmid/image-generation-editing?continueFlag=6a2e6b25c6b8a9ec8598c7b12e7d808c">图片生成编辑网页APP</a></p>
-<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.xiaohuanxiong.com">办公小浣熊</a> <a href="https://www.metaso.cn">Metaso</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.google.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
+<p><a href="https://www.doubao.com"><strong>doubao</strong></a> <a href="https://www.xiaohuanxiong.com">办公小浣熊</a> <a href="https://www.metaso.cn">Metaso秘塔</a> <a href="https://tongyi.aliyun.com/">tongyi</a> <a href="https://ima.qq.com">Ima</a> <a href="https://notebooklm.google.com"><strong>NotebookLM</strong></a> <a href="https://quark.cn">quark</a> <a href="https://yuewen.cn">阶跃</a>
 <a href="https://yuanbao.tencent.cn">元宝</a></p>
-<p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a></p>
+<p><a href="https://www.suno.ai"><strong>suno</strong></a> <a href="https://www.haimian.com">Haimian</a> <a href="https://elevenlabs.io/">TTS</a> <a href="https://ttsmaker.cn">ttsmaker</a> <a href="https://www.pika.art">Pika</a> <a href="https://www.heygen.com">Heygen</a> <a href="https://peiyin.xunfei.cn/make">讯飞智见配音</a> <a href="https://zhiwen.xfyun.cn/">讯飞智文</a> <a href="https://zenvideo.qq.com">腾讯智影</a> <a href="https://www.canva.com">Canva</a> <a href="https://listenhub.ai">listenhub播客生成</a></p>
 <p><a href="https://www.coze.com"><strong>Coze</strong></a>
 [Bolt.new]</p>
 <p><a href="https://manus.im"><strong>Manus</strong></a> <a href="https://www.genspark.ai/">Genspark</a></p>
@@ -1501,9 +1501,10 @@ document.addEventListener("DOMContentLoaded", function() {
 <h1>Tools</h1>
 <p><a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a></p>
 <p><a href="https://www.turnitin.com">turnitin查重</a></p>
-<p><a href="https://excalidraw.com"><strong>Excalidraw</strong></a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai"><strong>AI可视化napkin</strong></a> <a href="https://www.visdoc.cn">文生图表</a></p>
-<p><a href="https://www.feishu.cn"><strong>飞书</strong></a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://Protonvpn.com">Protonvpn</a></p>
-<p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a></p>
+<p><a href="https://excalidraw.com"><strong>Excalidraw</strong></a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai"><strong>AI可视化napkin</strong></a> <a href="https://www.visdoc.cn">文生图表</a> <a href="https://mapify.com.cn">mapify思维导图</a></p>
+<p><a href="https://www.feishu.cn"><strong>飞书</strong></a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://Protonvpn.com">Protonvpn</a> <a href="https://xiezuocat.com">秘塔写作猫</a></p>
+<p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a> <a href="https://arc.tencent.com/zh/ai-demos/faceRestoration">腾讯ARC图片增强</a>
+<a href="https://www.coze.cn/store/project/7443274617134923827?bid=6gotn88h44g18">抠图神器</a></p>
 <p><a href="https://blog.csdn.net/qq_66536007/article/details/140515188">overleaft</a></p>
 <p><a href="https://tool.liumingye.cn">liumingyetool</a></p>
 <p><a href="https://www.kamiapp.com/"><strong>Kami插件</strong>音视频批注</a>
