--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-07-09" />
+<meta name="date" content="2025-07-14" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-07-09</h4>
+<h4 class="date">2025-07-14</h4>
 
 </div>
 
@@ -1540,7 +1540,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="github" class="section level1">
 <h1>Github</h1>
-<p><a href="https://lizongzhang.github.io/excelstat/">LZZ</a></p>
+<p><a href="https://lizongzhang.github.io/excelstat/">LZZ</a> <a href="https://ghproxy.link/">Github加速</a></p>
 </div>
 <div id="mac" class="section level1">
 <h1>Mac</h1>
