--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-07-14" />
+<meta name="date" content="2025-08-19" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-07-14</h4>
+<h4 class="date">2025-08-19</h4>
 
 </div>
 
@@ -1545,7 +1545,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="mac" class="section level1">
 <h1>Mac</h1>
 <p>[Arc] [Doubao] [screen studio] [downie 4] [ina] [pdfgear] [tuxera
-disk] [visual studio code]</p>
+disk] [visual studio code] <a href="https://zyicu.cn/?p=20219">Mac
+soft</a></p>
 </div>
 
 
