--- a/url.html
+++ b/url.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2025-08-19" />
+<meta name="date" content="2025-08-21" />
 
 <title>Links</title>
 
@@ -1462,7 +1462,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Links</h1>
-<h4 class="date">2025-08-19</h4>
+<h4 class="date">2025-08-21</h4>
 
 </div>
 
@@ -1502,7 +1502,8 @@ document.addEventListener("DOMContentLoaded", function() {
 <p><a href="https://scholar.chongbuluo.com/">Search</a> <a href="ttps://z-lib.fm">zlibrary</a> <a href="https://zh.z-lib.gs">zlibrary2</a> <a href="https://z-library.sk">zlibrary3</a></p>
 <p><a href="https://www.turnitin.com">turnitin查重</a></p>
 <p><a href="https://excalidraw.com"><strong>Excalidraw</strong></a> <a href="https://draw.io">Draw.io</a> <a href="https://markdown-map.com">Markdownmap</a> <a href="https://infografix.app/app">可视化infografix</a> <a href="https://www.napkin.ai"><strong>AI可视化napkin</strong></a> <a href="https://www.visdoc.cn">文生图表</a> <a href="https://mapify.com.cn">mapify思维导图</a></p>
-<p><a href="https://www.feishu.cn"><strong>飞书</strong></a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://Protonvpn.com">Protonvpn</a> <a href="https://xiezuocat.com">秘塔写作猫校对优化</a></p>
+<p><a href="https://www.feishu.cn"><strong>飞书</strong></a> <a href="https://mubu.com">幕布</a> <a href="https://sunlogin.oray.com">向日葵</a> <a href="https://www.roosf.com">vpn</a> <a href="https://qi77.cc">vpn2</a>
+<a href="https://Protonvpn.com">Protonvpn</a> <a href="https://xiezuocat.com">秘塔写作猫校对优化</a></p>
 <p><a href="https://www.recraft.ai/"><strong>Recraft</strong></a> <a href="https://www.photopea.com/">Photopea</a> <a href="https://shoteasy.fun">pic2</a> <a href="https://www.videvo.net">video</a> <a href="https://www.fesliyanstudios.com">bg</a> <a href="https://arc.tencent.com/zh/ai-demos/faceRestoration">腾讯ARC图片增强</a>
 <a href="https://www.coze.cn/store/project/7443274617134923827?bid=6gotn88h44g18">抠图神器</a></p>
 <p><a href="https://blog.csdn.net/qq_66536007/article/details/140515188">overleaft</a></p>
